--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="advantages">
         <div class="container">
-            <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
                 <div class="advantages__item">
                     <img src="img/icons/adv_cup.png" alt="cup">
@@ -81,6 +81,22 @@
                     <a href="#">I LOVE RUNNING.</a>
                     </div>
             </div>
+        </div>
+    </div>
+    <div class="consultation">
+        <div class="container">
+            <div class="title title_left">
+                Получите бесплатную консультацию <br>по подбору пульсометра 
+            </div>
+            <div class="consultation__desc">
+                Просто заполните форму заявки <br>и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя">
+                <input name="phone" required type="number" placeholder="Ваш телефон">
+                <input name="email" required type="email" placeholder="Ваш E-mail">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
 </body>
