--- a/src/index.html
+++ b/src/index.html
@@ -102,21 +102,23 @@
     </section>
 
     <section class="carousel">
-        <div class="carousel__inner">
-            <div>
-                <img src="img/images/watches1.png" alt="">
-            </div>
-            <div>
-                <img src="img/images/watches2.png" alt="">
-            </div>
-            <div>
-                <img src="img/images/watches3.png" alt="">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/images/watches1.png" alt="slide">
+                </div>
+                <div>
+                    <img src="img/images/watches2.png" alt="slide">
+                </div>
+                <div>
+                    <img src="img/images/watches3.png" alt="slide">
+                </div>
             </div>
         </div>
     </section>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script scr="js/slick.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
