--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                     так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                 </div>
                 <div class="advantages__item">
-                    <img src="img/icons/adv_heart.png" alt="heart">
+                    <img src="img/icons/adv_heart.png" alt="heart" class="advantages__icon advantages__icon_animated">
                     <span>Заботимся о здоровье</span>
                     Мы работаем для того, 
                     чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
